[tool.poetry]
name = "test-torch"
version = "0.1.0"
description = ""
authors = ["torupati"]
readme = "README.md"
packages = [{include = "test_torch"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "2.0.1", source="torch"}
torchvision = "^0.15.2"
torchaudio = "^2.0.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
